Doc/force-app/main/default/objects/Contract_Product_Line__c/fields/Contract_Product_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Product_Notes__c</fullName>
    <description>Notes about this contract product line</description>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>